# project-templates

./: .flake8  .gitignore  Caddyfile  README.md  app.py  db-compose.yml  example_prod_config.json  gethatch  mkfe.py  pyproject.toml  seed.py
docs/: run_doctests.py  serve.py
src/packagename/: __init__.py  utils.py
src/packagename/api/: __init__.py  v1.py
src/packagename/db/: __init__.py  models.py  sessions.py
src/packagename/frontend/: __init__.py
src/packagename/frontend/spa/: __init__.py
src/packagename/frontend/spa/site/: index.html
src/packagename/frontend/static/: __init__.py
src/packagename/frontend/static/site/: index.html  main.js  page.html
src/packagename/frontend/static/site/nested/: page.html
tests/: conftest.py
tests/api/: v1_test.py
